fix: dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,11 +83,11 @@
   }
 
   .cart-border {
-    @apply absolute h-0.5 w-full bg-neutral-200 after:absolute after:h-0.5 after:w-0 after:bg-neutral-200 after:transition-all after:delay-500 after:duration-500 after:ease-linear after:content-[''];
+    @apply absolute h-0.5 w-full bg-neutral-200 after:absolute after:h-0.5 after:w-0 after:bg-neutral-200 after:transition-all after:delay-500 after:duration-500 after:ease-linear after:content-[''] dark:bg-slate-600;
   }
 
   .factor-item {
-    @apply flex-1 p-2 odd:bg-neutral-100 even:bg-neutral-200;
+    @apply flex-1 p-2 odd:bg-neutral-100 even:bg-neutral-200 dark:odd:bg-slate-700 dark:even:bg-slate-600 dark:text-slate-100;
   }
 }
 
@@ -199,7 +199,7 @@
   }
 
   .cart__topbar-item {
-    @apply flex select-none items-center gap-1 bg-white py-1 pl-2 font-bold leading-[22.4px] text-slate-700 transition-colors delay-100 duration-500 ease-linear dark:text-slate-300;
+    @apply flex select-none items-center gap-1 bg-white py-1 pl-2 font-bold leading-[22.4px] text-slate-700 transition-colors delay-700 duration-500 dark:bg-slate-800 dark:text-white;
 
     &.active {
       @apply text-sky-500;
